<resources>
    <string name="app_description">This app is designed to test your knowledge
    of world geography. The quiz asks you to match countries to their continents and
        neighboring countries.</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="past_results">Past Results</string>
    <string name="image_description">Globe</string>
    <string name="basic_quiz">Basic Quiz</string>
    <string name="advanced_quiz">Advanced Quiz</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">Geography Quiz</string>
    <string name="title">Geography Quiz</string>
    <string name="start">Let\'s Start!</string>
    <string name="results">Results</string>
    <string name="info">Guess the continent the a country is on as well as its neighbor.</string>
    <string name="quiz_results">You scored %1$s%% on the quiz.</string>
    <string name="submit_quiz">Submit Quiz</string>
    <string name="go_home">Go Home</string>
    <string name="basic_question">What continent is %1$s in?</string>
    <string name="advanced_question">Which country neighbors %1$s?</string>
    <string name="choice1">A. %1$s</string>
    <string name="choice2">B. %1$s</string>
    <string name="choice3">C. %1$s</string>
    <string name="choice4">D. No Neighbor</string>
</resources>
